# research-assistant

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  ruff.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: __init__.py  fact_checker.py  search_agent.py  summarizer.py  supervisor.py
config/: __init__.py  settings.py
docs/: API.md  Architecture.md  Contributing.md  Deployment.md  Troubleshooting.md
graph/: __init__.py  state.py  workflow.py
research_outputs/: research_20260622_050152_What_are_the_latest_developments_in_LLM_reasoning_.md
tests/: __init__.py  test_end_to_end.py
tools/: __init__.py  search_tools.py
