[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "research-assistant"
version = "1.1.0"
description = "Multi-Agent Research Assistant — LangGraph supervisor workflow with ReAct search, summarization, fact-checking, and self-reflection."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Vasu Agrawal", email = "" },
]
keywords = [
    "langgraph", "langchain", "groq", "multi-agent", "ai", "research",
    "agentic", "llm", "duckduckgo", "react", "supervisor", "fact-checking",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-community>=0.3.0",
    "ddgs>=0.1.0",
    "duckduckgo-search>=6.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.urls]
"Source Code" = "https://github.com/vasu356/research-assistant"
"Bug Tracker" = "https://github.com/vasu356/research-assistant/issues"
"Documentation" = "https://github.com/vasu356/research-assistant/tree/main/docs"
"LinkedIn" = "https://www.linkedin.com/in/vasu-agrawal-m26a2003y"

[tool.setuptools.packages.find]
include = ["agents*", "config*", "graph*", "tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["agents", "config", "graph", "tools"]
omit = ["*/tests/*"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true

[[tool.mypy.overrides]]
module = "tools.search_tools"
ignore_errors = true
